cmake_minimum_required(VERSION 3.13)
project(ProgOnCPP)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})
find_package(SDL REQUIRED)
find_package ( SDL_ttf REQUIRED )
find_package ( SDL_gfx REQUIRED )
find_package ( SDL_draw REQUIRED )
# Workaround for the non-working REQUIRED flag
if ( NOT SDL_FOUND )
    message ( FATAL_ERROR "SDL not found!" )
endif ( NOT SDL_FOUND )

link_libraries (
        ${SDL_LIBRARY}
        ${SDLDRAW_LIBRARY}
        ${SDLTTF_LIBRARY} # if using SDL_ttf, obviously
        SDLmain # Sadly not included in SDL_LIBRARY variable
)
set(CMAKE_CXX_STANDARD 17)
add_executable(ProgOnCPP Lab2/main.cpp)
#target_link_libraries(ProgOnCPP /usr/lib/SDL.h)